package ArkhitekturaPO.Practocal.Practical_3.DIP;

interface DataSource {
    String getData();
}
