package ArkhitekturaPO.Practocal.Practical_3.DIP;

class File implements DataSource {
    public String getData() {
        return "Данные из файла";
    }
}
